--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -517,11 +517,33 @@
                                                             <li class="gdlr-core-item-mglr">
                                                                 <div class="gdlr-core-testimonial clearfix">
                                                                     <div class="gdlr-core-testimonial-content-wrap">                                                                        <div class="gdlr-core-testimonial-content gdlr-core-info-font gdlr-core-skin-content" style="font-size: 25px ;font-style: italic ;font-weight: 400 ;letter-spacing: 0px ;color: #000000 ;padding-bottom: 20px ;">
+                                                                            <p>My mother recently visited Tender Care Community Clinic for her routine health check-up and was thoroughly impressed by the exceptional care provided by their Nurse Practitioner, Suzanne and the OB-GYN, Dr. Wilson.
+
+The Nurse Practitioner from the moment she stepped into the clinic, she made my mother feel completely at ease. Her warm and friendly demeanor, combined with her extensive knowledge, was incredibly reassuring. The NP took the time to listen to my mother's concerns, answered all her questions in a way that was easy to understand, and provided personalized care that was both professional and compassionate.
+
+Dr. Wilson was equally impressive. His expertise in women's health is evident. He conducted a thorough examination, explained every step of the process, and made sure she was comfortable throughout her visit. Dr. Wilson is not only highly skilled but also empathetic and supportive, which is exactly what you want in an OB-GYN.
+
+The team at Tender Care community Clinic works seamlessly together, ensuring a smooth and pleasant experience for their patients. It's rare to find such a combination of professionalism, kindness, and exceptional medical care. I highly recommend this clinic for anyone seeking top-notch women's health services.
+
+Thank you, NP Suzanne and Dr. Wilson for your outstanding care!</p>
+                                                                        </div>
+                                                                        <div class="gdlr-core-testimonial-author-wrap clearfix">
+                                                                            <div class="gdlr-core-testimonial-author-content">
+                                                                                <div class="gdlr-core-testimonial-title gdlr-core-title-font gdlr-core-skin-title" style="color: #000000 ;font-size: 20px ;font-weight: 700 ;letter-spacing: 0px ;text-transform: none ;">Joshua P. -  January 21, 2024</div>
+                                                                            </div>
+                                                                        </div>
+                                                                            <img class="test-star" src="/images/5-stars-transparent-background-3.png">
+                                                                    </div>
+                                                                </div>
+                                                            </li>
+                                                            <li class="gdlr-core-item-mglr">
+                                                                <div class="gdlr-core-testimonial clearfix">
+                                                                    <div class="gdlr-core-testimonial-content-wrap">                                                                        <div class="gdlr-core-testimonial-content gdlr-core-info-font gdlr-core-skin-content" style="font-size: 25px ;font-style: italic ;font-weight: 400 ;letter-spacing: 0px ;color: #000000 ;padding-bottom: 20px ;">
                                                                             <p>Doctor Morales is one of the Best Obstetrician/Gynecologist I ever had he delivered my daughter last week I am so grateful for that I will definitely recommend him.</p>
                                                                         </div>
                                                                         <div class="gdlr-core-testimonial-author-wrap clearfix">
                                                                             <div class="gdlr-core-testimonial-author-content">
-                                                                                <div class="gdlr-core-testimonial-title gdlr-core-title-font gdlr-core-skin-title" style="color: #000000 ;font-size: 20px ;font-weight: 700 ;letter-spacing: 0px ;text-transform: none ;">Lizeth Damian -  Decembe 10, 2023</div>
+                                                                                <div class="gdlr-core-testimonial-title gdlr-core-title-font gdlr-core-skin-title" style="color: #000000 ;font-size: 20px ;font-weight: 700 ;letter-spacing: 0px ;text-transform: none ;">Lizeth Damian -  December 10, 2023</div>
                                                                             </div>
                                                                         </div>
                                                                             <img class="test-star" src="/images/5-stars-transparent-background-3.png">
@@ -549,7 +571,7 @@
                                                                         </div>
                                                                         <div class="gdlr-core-testimonial-author-wrap clearfix">
                                                                             <div class="gdlr-core-testimonial-author-content">
-                                                                                <div class="gdlr-core-testimonial-title gdlr-core-title-font gdlr-core-skin-title" style="color: #000000 ;font-size: 20px ;font-weight: 700 ;letter-spacing: 0px ;text-transform: none ;">Ms. Khoy -  Feb, 2019</div>
+                                                                                <div class="gdlr-core-testimonial-title gdlr-core-title-font gdlr-core-skin-title" style="color: #000000 ;font-size: 20px ;font-weight: 700 ;letter-spacing: 0px ;text-transform: none ;">Ms. Khoy -  February, 2019</div>
                                                                             </div>
                                                                         </div>
                                                                             <img class="test-star" src="/images/5-stars-transparent-background-3.png">
@@ -564,7 +586,7 @@
                                                                         </div>
                                                                         <div class="gdlr-core-testimonial-author-wrap clearfix">
                                                                             <div class="gdlr-core-testimonial-author-content">
-                                                                                <div class="gdlr-core-testimonial-title gdlr-core-title-font gdlr-core-skin-title" style="color: #000000 ;font-size: 20px ;font-weight: 700 ;letter-spacing: 0px ;text-transform: none">Elba - Mar, 2019
+                                                                                <div class="gdlr-core-testimonial-title gdlr-core-title-font gdlr-core-skin-title" style="color: #000000 ;font-size: 20px ;font-weight: 700 ;letter-spacing: 0px ;text-transform: none">Elba - March, 2019
 
                                                                                 </div>
                                                                             </div>
@@ -581,7 +603,7 @@
                                                                         </div>
                                                                         <div class="gdlr-core-testimonial-author-wrap clearfix">
                                                                             <div class="gdlr-core-testimonial-author-content">
-                                                                                <div class="gdlr-core-testimonial-title gdlr-core-title-font gdlr-core-skin-title" style="color: #000000 ;font-size: 20px ;font-weight: 700 ;letter-spacing: 0px ;text-transform: none ;">Steph J. - Nov, 2018</div>
+                                                                                <div class="gdlr-core-testimonial-title gdlr-core-title-font gdlr-core-skin-title" style="color: #000000 ;font-size: 20px ;font-weight: 700 ;letter-spacing: 0px ;text-transform: none ;">Steph J. - November, 2018</div>
                                                                             </div>
                                                                         </div>
                                                                         <img class="test-star" src="/images/5-stars-transparent-background-3.png">
@@ -595,7 +617,7 @@
                                                                         </div>
                                                                         <div class="gdlr-core-testimonial-author-wrap clearfix">
                                                                             <div class="gdlr-core-testimonial-author-content">
-                                                                                <div class="gdlr-core-testimonial-title gdlr-core-title-font gdlr-core-skin-title" style="color: #000000 ;font-size: 20px ;font-weight: 700 ;letter-spacing: 0px ;text-transform: none ;">Josephine O. Agdigos – Nov, 2021</div>
+                                                                                <div class="gdlr-core-testimonial-title gdlr-core-title-font gdlr-core-skin-title" style="color: #000000 ;font-size: 20px ;font-weight: 700 ;letter-spacing: 0px ;text-transform: none ;">Josephine O. Agdigos – November, 2021</div>
                                                                             </div>
                                                                         </div>
                                                                             <img class="test-star" src="/images/5-stars-transparent-background-3.png">
